# SmartFileCabinet

./: README.md  indexcopy3_fixed.html  squid_dashboard8.html
backend/: cli.py  main(backup).py  main(v2backup).py  main.py  pyproject.toml  requirements.txt
backend/business_hub/: ai.py  ingest.py  models.py  pdf_fill.py  storage.py
backend/data/: business_hub.db
backend/public/: index.html
backend/tests/: test_pdf_fill.py
desktop/: index.html  package.json  tailwind.config.cjs  tsconfig.json
desktop/src/: App.tsx  main.tsx
desktop/src/components/: RecordInspector.tsx  Sidebar.tsx  TaskPanel.tsx  ThreadList.tsx  WorkspaceHeader.tsx
desktop/src/styles/: tokens.css
docs/: BusinessHubAppSpec.md
smart_file_cabinet/: __init__.py  ai_client.py
